Harden email importer
Simplify duplicates tab

Add soft delete and Trash

More customization and usability improvements

Add more meta data and collapse view

Squash bugs
